--- a/www/templates/tab-dash.html
+++ b/www/templates/tab-dash.html
@@ -9,5 +9,8 @@
 		{{sport.name}}
 	</div>
 </div>
+<button class="button button-block button-positive" ng-click="add('chat')">
+Add
+</button>
 </ion-content>
 </ion-view>
