--- a/www/templates/tab-account.html
+++ b/www/templates/tab-account.html
@@ -1,9 +1,15 @@
 <ion-view view-title="Account">
-  <ion-content>
-    <ion-list>
-    <ion-toggle  ng-model="settings.enableFriends">
-        Enable Friends
-    </ion-toggle>
-    </ion-list>
-  </ion-content>
+<ion-content>
+<div class="item">
+	<label class="item item-input">
+		<input type="email" name="email" class="form-control" ng-model="vm.user.email" required>
+	</label>
+	<label class="item item-input">
+		<input type="password" name="password" class="form-control" ng-model="vm.user.password" required>
+	</label>
+	<button class="button button-full button-positive" ng-click="vm.login()" >
+	Submit
+	</button>
+</div>
+</ion-content>
 </ion-view>
