--- a/www/templates/auth.html
+++ b/www/templates/auth.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Account">
+<ion-view view-title="Authentication">
 <ion-content>
 <div class="item">
 	<label class="item item-input">
@@ -12,4 +12,7 @@
 	</button>
 </div>
 </ion-content>
+<div class="bar bar-footer bar-assertive" ng-show="vm.error">
+  <div class="title">{{vm.error}}</div>
+</div>
 </ion-view>
