bouton retour de my sports

--- a/www/templates/account/my-sports.html
+++ b/www/templates/account/my-sports.html
@@ -1,1 +1,5 @@
-my-sports.html
+<ion-view title="My Sports">
+  <ion-content class="has-header" padding="true">
+    <h1>List of sports</h1>
+  </ion-content>
+</ion-view>
