--- a/www/templates/menus.html
+++ b/www/templates/menus.html
@@ -3,7 +3,7 @@
 	<ion-side-menu-content>
 		<ion-nav-bar class="bar-stable">
 			<ion-nav-back-button class="button-clear">
-				<i class="ion-arrow-left-c"></i> Back
+				<i class="icon ion-chevron-left"></i>
 			</ion-nav-back-button>
 		</ion-nav-bar>
 		<ion-nav-view name="home-dash" animation="slide-left-right">
