--- a/www/templates/account/list.html
+++ b/www/templates/account/list.html
@@ -1,8 +1,8 @@
 <ion-view title="Account">
-	  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
-	<ion-content has-header="true" padding="true">
+	<ion-nav-buttons side="left">
+		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
+	</ion-nav-buttons>
+	<ion-content has-header="true">
 		<div class="list">
 			<a class="item item-avatar" href="#/home/account/mysports">
 				<img src="http://span.com.ng/images/basketball1.png" />
