--- a/www/templates/menus.html
+++ b/www/templates/menus.html
@@ -1,7 +1,7 @@
 <ion-side-menus>
 	<!-- Main content -->
 	<ion-side-menu-content>
-		<ion-nav-bar class="bar-stable">
+		<ion-nav-bar class="bar-stable bar-positive">
 			<ion-nav-back-button class="button-clear">
 				<i class="icon ion-chevron-left"></i>
 			</ion-nav-back-button>
@@ -11,13 +11,27 @@
 	</ion-side-menu-content>
 	<!-- Left Side Menu -->
 	<ion-side-menu side="left">
-		<header class="bar bar-header bar-stable">
-			<h1 class="title">Left</h1>
+		<header class="bar bar-header bar-assertive">
+			<h1 class="title">Home</h1>
 		</header>
 		<ion-content class="has-header">
 			<ion-list>
+				<ion-item-divider class="item item-divider">
+					Let's sport!
+				</ion-item-divider>
+				<ion-item menu-close href="#/home/dash">
+					Dashboard
+				</ion-item>
 				<ion-item menu-close href="#/home/account">
 					Account
+				</ion-item>
+
+
+				<ion-item-divider class="item item-divider">
+					Application
+				</ion-item-divider>
+				<ion-item menu-close href="#/home/information">
+					Information
 				</ion-item>
 			</ion-list>
 		</ion-content>
