affichage de la version

--- a/www/templates/information.html
+++ b/www/templates/information.html
@@ -13,7 +13,7 @@
 				Do a comment? Report a bug?
 			</ion-item>
 			<ion-item>
-				Version : {{vm.version}}
+				Version : <span ng-bind="version"></span>
 			</ion-item>
 		</ion-list>
 	</ion-content>
