--- a/www/templates/account/list.html
+++ b/www/templates/account/list.html
@@ -9,6 +9,11 @@
 				<h2>My Sports</h2>
 				<p>Select your sports to find perfect partners</p>
 			</a>
+
+			<ion-item class="item item-icon-right" ng-click="logout()">
+			<i class="icon ion-log-out"></i>
+				Logout
+			</ion-item>
 		</div>
 	</ion-content>
 </ion-view>
