--- a/www/templates/account/my-sports.html
+++ b/www/templates/account/my-sports.html
@@ -3,9 +3,9 @@
 		<div class="item item-divider">
 			Selected
 		</div>
-		<div class="item item-button-right" ng-repeat="sport in vm.mySports| orderBy : 'name'">
+		<div class="item item-button-right" ng-repeat="sport in mySports track by $index| orderBy : 'name'">
 			<span ng-bind="sport.name"></span>
-			<button class="button button-outline button-assertive">
+			<button class="button button-outline button-assertive" ng-click="unselect(sport,$index)">
 			<i class="icon ion-minus"></i>
 			</button>
 		</div>
@@ -13,9 +13,9 @@
 		<div class="item item-divider">
 			Not selected
 		</div>
-		<div class="item item-button-right" ng-repeat="sport in vm.noneMySports | orderBy : 'name'">
+		<div class="item item-button-right" ng-repeat="sport in noneMySports track by $index | orderBy : 'name'">
 			<span ng-bind="sport.name"></span>
-			<button class="button button-outline button-balanced">
+			<button class="button button-outline button-balanced" ng-click="select(sport,$index)">
 			<i class="icon ion-plus"></i>
 			</button>
 		</div>
