--- a/www/templates/account/list.html
+++ b/www/templates/account/list.html
@@ -7,7 +7,7 @@
 			<a class="item item-avatar" href="#/home/account/mysports">
 				<img src="http://span.com.ng/images/basketball1.png" />
 				<h2>My Sports</h2>
-				<p>Select your sports to find perfect partners</p>
+				<p>Select your sports</p>
 			</a>
 
 			<ion-item class="item item-icon-right" ng-click="logout()">
