--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -2,14 +2,16 @@
 	<ion-content>
 		<div class="list">
 			<label class="item item-input">
-				<input type="email" name="email" class="form-control" ng-model="user.email" required>
+				<input ng-disabled="isLogin" type="email" name="email" class="form-control" ng-model="user.email" required>
 			</label>
 			<label class="item item-input">
-				<input type="password" name="password" class="form-control" ng-model="user.password" required>
+				<input ng-disabled="isLogin" type="password" name="password" class="form-control" ng-model="user.password" required>
 			</label>
 			<div class="padding">
-				<button class="button button-full button-positive" ng-click="login()" >
-				Login
+				<button class="button button-full button-positive" ng-disabled="isLogin" ng-click="login()" >
+				<span ng-show="!isLogin">Login</span>
+				<ion-spinner class="spinner-light" ng-show="isLogin" icon="spiral">
+				</ion-spinner>
 				</button>
 			</div>
 		</div>
