--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -14,6 +14,7 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
+$toto:#444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
