--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -3,24 +3,6 @@
 		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
 	<ion-content class="has-header padding">
-		<div class="list card">
-			<div class="item item-avatar">
-				<img src="https://pbs.twimg.com/profile_images/1234618042/MartyMcfly.jpg">
-				<h2>Marty McFly</h2>
-				<p>November 05, 1955</p>
-			</div>
-			<div class="item item-body">
-				<img class="full-image" src="http://www.telegraph.co.uk/cars/images/2015/12/09/1-DeLorean-DMC-12-doors-open-large_trans++rWYeUU_H0zBKyvljOo6zlkYMapKPjdhyLnv9ax6_too.jpg">
-				<p>
-					This is a "FB" styled Card. The header is created from a Thumbnail List item,
-					the content is from a card-body consisting of an image and paragraph text. The footer
-					consists of tabs, icons aligned left, within the card-footer.
-				</p>
-				<p>
-					<a href="#" class="subdued">1 Like</a>
-					<a href="#" class="subdued">5 Comments</a>
-				</p>
-			</div>
-		</div>
+		Dashboard
 	</ion-content>
 </ion-view>
