--- a/app/templates/menus.html
+++ b/app/templates/menus.html
@@ -19,17 +19,16 @@
 				<ion-item-divider class="item item-divider">
 					Let's sport!
 				</ion-item-divider>
-				<ion-item menu-close href="#/home/dash">
+				<ion-item menu-close ui-sref="homemenu.dash">
 					Dashboard
 				</ion-item>
-				<ion-item menu-close href="#/home/account">
+				<ion-item menu-close ui-sref="account">
 					Account
 				</ion-item>
-
 				<ion-item-divider class="item item-divider">
 					Application
 				</ion-item-divider>
-				<ion-item menu-close href="#/home/information">
+				<ion-item menu-close ui-sref="homemenu.information">
 					Information
 				</ion-item>
 			</ion-list>
