--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,19 +1,20 @@
-<ion-view view-title="Login">
-	<ion-content>
-		<div class="list">
+<ion-view hide-nav-bar="true">
+  <ion-content class="authentication">
+		<div class="list padding">
 			<label class="item item-input">
 				<input placeholder="E-mail" ng-disabled="isLogin" type="email" name="email" class="form-control" ng-model="user.email" required>
 			</label>
 			<label class="item item-input">
 				<input placeholder="Password" ng-disabled="isLogin" type="password" name="password" class="form-control" ng-model="user.password" required>
 			</label>
-			<div class="padding">
-				<button class="button button-full button-positive" ng-disabled="isLogin" ng-click="login()" >
+				<button class="button button-block button-positive" ng-disabled="isLogin" ng-click="login()" >
 				<span ng-show="!isLogin">Login</span>
 				<ion-spinner class="spinner-light" ng-show="isLogin" icon="spiral">
 				</ion-spinner>
 				</button>
-			</div>
+				<a class="button button-block button-outline button-positive" ng-disabled="isLogin" ui-sref="signup" >
+				<span ng-show="!isLogin">Sign up</span>
+				</a>
 		</div>
 	</ion-content>
 	<div class="bar bar-footer bar-assertive" ng-show="error">
