--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -3,6 +3,6 @@
 		<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	</ion-nav-buttons>
 	<ion-content class="has-header padding">
-		Dashboard
+		My dashboard
 	</ion-content>
 </ion-view>
