--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,3 +18,9 @@ a, a:hover{
   vertical-align: middle;
   text-align: center;
 }
+
+.authentication .item-input{
+  margin-bottom: 10px;
+  border-bottom-width: 5px;
+  border-radius: 4px;
+}
