--- a/scss/app.scss
+++ b/scss/app.scss
@@ -14,10 +14,10 @@ $royal:                           #886aea !default;
 $dark:                            #444 !default;
 */
 
-$toto:#444 !default;
 // The path for our ionicons font files, relative to the built CSS in www/css
 $ionicons-font-path: "../lib/ionic/fonts" !default;
 
 // Include all of Ionic
-@import "www/lib/ionic/scss/ionic";
+@import "app/lib/ionic/scss/ionic";
 
+@import "authentication";
