directive compareTo for password matching

--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -1,35 +1,46 @@
 <ion-view hide-nav-bar="true">
-  <ion-content class="authentication">
-    <div class="list padding">
-      <label class="item item-input">
-        <span class="input-label">Name</span>
-        <input placeholder="Name" ng-disabled="isSignup" type="text" name="name" class="form-control" ng-model="user.name" required />
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Email</span>
-        <input placeholder="E-mail" ng-disabled="isSignup" type="email" name="email" class="form-control" ng-model="user.email" required />
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Password</span>
-        <input placeholder="Password" ng-disabled="isSignup" type="password" name="password" class="form-control" ng-model="user.password" required />
-      </label>
-      <label class="item item-input">
-        <span class="input-label">Confirm</span>
-        <input placeholder="Password" ng-disabled="isSignup" type="password" name="password" class="form-control" ng-model="user.password2" required />
-      </label>
-      <button class="button button-block button-balanced" ng-disabled="isSignup" ng-click="signup()" >
-      <span ng-show="!isSignup">Sign up</span>
-      <ion-spinner class="spinner-light" ng-show="isSignup" icon="spiral">
-      </ion-spinner>
-      </button>
-      <a ui-sref="login">
-        <button class="button button-block button-outline button-positive" ng-disabled="isSignup">
-        <span>Login</span>
+  <form name="form" ng-submit="signup(form)" novalidate>
+    <ion-content class="authentication">
+      <div class="list padding">
+        <label class="item item-input" ng-class="{'invalid': form.name.$invalid && !form.name.$pristine, 'valid': form.name.$valid && !form.name.$pristine}">
+          <span class="input-label">Name</span>
+          <input placeholder="Name" ng-disabled="isSignup" type="text" name="name" class="form-control" ng-model="user.name" ng-model-options="{ debounce: 500 }" ng-minlength="3" required>
+        </label>
+        <label class="item item-input" ng-class="{'invalid': form.email.$invalid && !form.email.$pristine, 'valid': form.email.$valid && !form.email.$pristine}">
+          <span class="input-label">Email</span>
+          <input placeholder="E-mail" ng-disabled="isSignup" type="email" name="email" class="form-control" ng-model="user.email" ng-model-options="{ debounce: 500 }" required>
+        </label>
+        <label class="item item-input" ng-class="{'invalid': form.password1.$invalid && !form.password1.$pristine, 'valid': form.password1.$valid && !form.password1.$pristine}">
+          <span class="input-label">Password</span>
+          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password1" class="form-control" ng-model="user.password1" ng-model-options="{ debounce: 500 }" required>
+        </label>
+        <label class="item item-input" ng-class="{'invalid': form.password2.$invalid && !form.password2.$pristine, 'valid': form.password2.$valid && !form.password2.$pristine}">
+          <span class="input-label">Confirm</span>
+          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password2" class="form-control" ng-model="user.password2" ng-model-options="{ debounce: 500 }" compare-to="user.password1" required>
+        </label>
+        <button class="button button-block button-balanced" ng-disabled="form.$invalid" type="submit">
+        <span ng-show="!isSignup">Sign up</span>
+        <ion-spinner class="spinner-light" ng-show="isSignup" icon="spiral">
+        </ion-spinner>
         </button>
-      </a>
+        <a ui-sref="login">
+          <button class="button button-block button-outline button-positive" ng-disabled="isSignup">
+          <span>Login</span>
+          </button>
+        </a>
+      </div>
+    </ion-content>
+    <div class="bar bar-footer bar-assertive" ng-show="form.name.$error.minlength && !form.name.$pristine">
+      <div class="title">Name is too short.</div>
     </div>
-  </ion-content>
-  <div class="bar bar-footer bar-assertive" ng-show="error">
-    <div class="title">{{error}}</div>
-  </div>
+    <div class="bar bar-footer bar-assertive" ng-show="form.email.$invalid && !form.email.$pristine">
+      <div class="title">Valid Email required.</div>
+    </div>
+    <div class="bar bar-footer bar-assertive" ng-show="form.password2.$error.compareTo && !form.password2.$pristine">
+      <div class="title">Passwords do not match.</div>
+    </div>
+    <div class="bar bar-footer bar-assertive" ng-show="error">
+      <div class="title">{{error}}</div>
+    </div>
+  </form>
 </ion-view>
