--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -4,19 +4,19 @@
       <div class="list padding">
         <label class="item item-input" ng-class="{'invalid': form.name.$invalid && !form.name.$pristine, 'valid': form.name.$valid && !form.name.$pristine}">
           <span class="input-label">Name</span>
-          <input placeholder="Name" ng-disabled="isSignup" type="text" name="name" class="form-control" ng-model="user.name" ng-model-options="{ debounce: 500 }" ng-minlength="3" required>
+          <input placeholder="Name" ng-disabled="isSignup" type="text" name="name" class="form-control" ng-model="user.name" ng-model-options="{ updateOn: 'blur' }" ng-minlength="3" required>
         </label>
         <label class="item item-input" ng-class="{'invalid': form.email.$invalid && !form.email.$pristine, 'valid': form.email.$valid && !form.email.$pristine}">
           <span class="input-label">Email</span>
-          <input placeholder="E-mail" ng-disabled="isSignup" type="email" name="email" class="form-control" ng-model="user.email" ng-model-options="{ debounce: 500 }" required>
+          <input placeholder="E-mail" ng-disabled="isSignup" type="email" name="email" class="form-control" ng-model="user.email" ng-model-options="{ updateOn: 'blur' }" required>
         </label>
         <label class="item item-input" ng-class="{'invalid': form.password1.$invalid && !form.password1.$pristine, 'valid': form.password1.$valid && !form.password1.$pristine}">
           <span class="input-label">Password</span>
-          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password1" class="form-control" ng-model="user.password" ng-model-options="{ debounce: 500 }" required>
+          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password1" class="form-control" ng-model="user.password" ng-model-options="{ updateOn: 'blur' }" required>
         </label>
         <label class="item item-input" ng-class="{'invalid': form.password2.$invalid && !form.password2.$pristine, 'valid': form.password2.$valid && !form.password2.$pristine}">
           <span class="input-label">Confirm</span>
-          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password2" class="form-control" ng-model="user.password2" ng-model-options="{ debounce: 500 }" compare-to="user.password" required>
+          <input placeholder="Password" ng-disabled="isSignup" type="password" name="password2" class="form-control" ng-model="user.password2" ng-model-options="{ debounce: 700 }" compare-to="user.password" required>
         </label>
         <button class="button button-block button-balanced" ng-disabled="form.$invalid" type="submit">
         <span ng-show="!isSignup">Sign up</span>
