add template list partners

--- a/app/templates/dash.html
+++ b/app/templates/dash.html
@@ -4,7 +4,7 @@
   </ion-nav-buttons>
   <ion-content class="padding">
     <div class="card">
-      <a ui-sref="search" class="item item-icon-left item-icon-right">
+      <a ui-sref="partners" class="item item-icon-left item-icon-right">
         <i class="icon ion-search"></i>
         Find partners
         <i class="icon ion-flag"></i>
