--- a/app/css/app.css
+++ b/app/css/app.css
@@ -9730,8 +9730,33 @@ a.button {
   -webkit-transition-duration: 0s;
   transition-duration: 0s; }
 
+.authentication {
+  padding: 10%; }
+
 .authentication .item-input.invalid {
   border-bottom-color: #ef473a; }
 
 .authentication .item-input.valid {
   border-bottom-color: #33cd5f; }
+
+.button svg {
+  display: block;
+  margin: auto; }
+
+a, a:hover {
+  text-decoration: none; }
+
+.center {
+  display: table !important;
+  width: 100% !important;
+  height: 100% !important; }
+
+.center .scroll {
+  display: table-cell;
+  vertical-align: middle;
+  text-align: center; }
+
+.center .item-input {
+  margin-bottom: 10px;
+  border-bottom-width: 5px;
+  border-radius: 4px; }
