--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,7 +1,6 @@
 <ion-view hide-nav-bar="true">
 	<form name="form" ng-submit="vm.login(form)" novalidate>
-		<ion-content class="authentication">
-			<div class="padding">
+		<ion-content class="center authentication">
 				<label class="item item-input" ng-class="{'invalid': form.email.$invalid && !form.email.$pristine, 'valid': form.email.$valid && !form.email.$pristine}">
 					<span class="input-label">Email</span>
 					<input placeholder="E-mail" ng-disabled="vm.isLogin" type="email" name="email" class="form-control" ng-model="vm.user.email" ng-model-options="{ updateOn: 'blur' }" required>
@@ -21,7 +20,6 @@
 					<span>Sign up</span>
 					</button>
 				</a>
-			</div>
 		</ion-content>
 
 		<div class="bar bar-footer bar-assertive" ng-show="form.email.$invalid && !form.email.$pristine">
