--- a/app/templates/partners/list.html
+++ b/app/templates/partners/list.html
@@ -1,8 +1,8 @@
 <ion-view title="Partners">
   <ion-nav-buttons side="right">
-    <button class="button">Filter</button>
+    <button class="button" ng-click="vm.filter()">Filter</button>
   </ion-nav-buttons>
-  <ion-content class="has-header padding">
+  <ion-content class="has-header">
     <div class="card" ng-repeat="partner in vm.partners">
       <div class="item item-text-wrap item-icon-right">
         <h2 ng-bind="partner.name"></h2>
