--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,3 +21,4 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "app/lib/ionic/scss/ionic";
 
 @import "authentication";
+@import "global";
