--- a/scss/global.scss
+++ b/scss/global.scss
@@ -1,4 +1,3 @@
-/* Empty. Add your own CSS if you like */
 .button svg{
  display: block;
  margin:auto;
@@ -7,20 +6,19 @@ a, a:hover{
   text-decoration: none;
 }
 
-/* Authentication pages */
-.authentication {
-  padding: 10%;
+.center {
   display: table !important;
   width: 100% !important;
   height: 100% !important;
 }
-.authentication .scroll {
+
+.center .scroll {
   display: table-cell;
   vertical-align: middle;
   text-align: center;
 }
 
-.authentication .item-input{
+.center .item-input{
   margin-bottom: 10px;
   border-bottom-width: 5px;
   border-radius: 4px;
