filter modal and partners search function

--- a/app/templates/partners/list.html
+++ b/app/templates/partners/list.html
@@ -1,6 +1,6 @@
 <ion-view title="Partners">
   <ion-nav-buttons side="right">
-    <button class="button" ng-click="vm.filter()">Filter</button>
+    <button class="button" ng-click="vm.modal.show()">Filter</button>
   </ion-nav-buttons>
   <ion-content class="has-header">
     <div class="card" ng-repeat="partner in vm.partners">
