--- a/app/templates/menus.html
+++ b/app/templates/menus.html
@@ -10,9 +10,10 @@
 		</ion-nav-view>
 	</ion-side-menu-content>
 	<!-- Left Side Menu -->
-	<ion-side-menu side="left">
-		<header class="bar bar-header bar-assertive">
-			<h1 class="title">Home</h1>
+	<ion-side-menu side="left" class="main-menu">
+		<header class="bar bar-assertive">
+			<div class="title" ng-bind="vm.name"></div>
+			<div ng-bind="vm.email"></div>
 		</header>
 		<ion-content class="has-header">
 			<ion-list>
