--- a/scss/app.scss
+++ b/scss/app.scss
@@ -21,4 +21,5 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 @import "app/lib/ionic/scss/ionic";
 
 @import "authentication";
+@import "menu";
 @import "global";
