--- a/app/templates/menus.html
+++ b/app/templates/menus.html
@@ -12,8 +12,8 @@
 	<!-- Left Side Menu -->
 	<ion-side-menu side="left" class="main-menu">
 		<header class="bar bar-assertive">
-			<div class="title" ng-bind="vm.name"></div>
-			<div ng-bind="vm.email"></div>
+			<h2 class="title" ng-bind="vm.name"></h2>
+			<p ng-bind="vm.email"></p>
 		</header>
 		<ion-content class="has-header">
 			<ion-list>
