--- a/scss/menu.scss
+++ b/scss/menu.scss
@@ -2,18 +2,18 @@
   .bar{
     height: $bar-height + 40px;
     display: block;
-
+    padding: 5px 10px;
 
     .title{
       position: initial;
       text-align: left;
-      margin: 0 10px;
+      margin: 0;
     }
 
     p{
       font-size: 15px;
       text-align: left;
-      margin: 0 10px;
+      margin: 0;
     }
   }
 
