feature/37 oauth2 google

--- a/app/templates/auth/signup.html
+++ b/app/templates/auth/signup.html
@@ -28,6 +28,7 @@
           <span>Login</span>
           </button>
         </a>
+        <oauth-buttons></oauth-buttons>
       </div>
     </ion-content>
     <div class="bar bar-footer bar-assertive" ng-show="form.name.$error.minlength && !form.name.$pristine">
