--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -20,6 +20,7 @@
 					<span>Sign up</span>
 					</button>
 				</a>
+				<oauth-buttons></oauth-buttons>
 		</ion-content>
 
 		<div class="bar bar-footer bar-assertive" ng-show="form.email.$invalid && !form.email.$pristine">
