--- a/app/templates/oauth-buttons/oauth-buttons.html
+++ b/app/templates/oauth-buttons/oauth-buttons.html
@@ -1,9 +1,5 @@
-<a ng-class="classes" ng-click="OauthButtons.loginOauth('facebook')" class="btn btn-social btn-facebook">
-  <i class="fa fa-facebook"></i>
-  Connect with Facebook
-</a>
-<a ng-class="classes" ng-click="OauthButtons.loginOauth('google')" class="btn btn-social btn-google">
-  <i class="fa fa-google-plus"></i>
-  Connect with Google+
-</a>
-
+<button class="button button-block button-assertive" ng-click="OauthButtons.loginOauth('google')" ng-disabled="isLogin">
+Google+
+<ion-spinner class="spinner-light" ng-show="OauthButtons.isLogin" icon="spiral">
+</ion-spinner>
+</button>
