--- a/app/templates/workout/workout.html
+++ b/app/templates/workout/workout.html
@@ -17,20 +17,20 @@
 			Created by <b ng-bind="vm.createdBy()"></b>
 		</p>
 	</div>
-	<div class="item radio" ng-if="vm.choice()">
+	<div class="item radio" ng-show="vm.hasInvitation()">
 		<div class="row">
 			<div class="col">
-				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'IN'">
+				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'1'">
 					Accept
 				</ion-radio>
 			</div>
 			<div class="col">
-				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'MAYBE'">
+				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'0'">
 					Maybe
 				</ion-radio>
 			</div>
 			<div class="col">
-				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'OUT'">
+				<ion-radio ng-model="vm.choice" ng-model-options="{ getterSetter: true }" ng-value="'2'">
 					Refuse
 				</ion-radio>
 			</div>
